--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,6 @@
         ".vscode": true,
         "node_modules": true,
         "typings": true,
-        ".gitignore": true
+        ".gitignore": false
     }
 }
